[gd_scene load_steps=2 format=3 uid="uid://cmr7bf7dr53ex"]

[ext_resource type="Script" uid="uid://dslsxad4dj6j4" path="res://scripts/graph_edit.gd" id="1_snvmi"]

[node name="GraphEdit" type="GraphEdit"]
clip_contents = false
size_flags_vertical = 3
show_grid = false
snapping_enabled = false
right_disconnects = true
connection_lines_thickness = 2.5
zoom = 0.8
minimap_enabled = false
show_zoom_label = true
script = ExtResource("1_snvmi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
anchor_top = -0.002
anchor_right = 1.0
anchor_bottom = -0.002
offset_top = 0.226
offset_bottom = 50.226

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
